poke/testsuite/poke.pkl/eq-arrays-diag-2.pk
/* { dg-do compile } */

deftype Foo = struct { byte a; byte b; };

defvar e
  = ([Foo {}] == [Foo {}, Foo {a=10UB}]); /* { dg-error "invalid.*\n.*expected Foo.*got Foo.*" } */
